--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -3,6 +3,22 @@
   margin-right: auto;
   width: 650px;
 }
+body {
+  background-color: rgb(235, 190, 232)
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+h1 {
+  color: black;
+  text-align: center;
+}
+h3 {
+  color: black;
+  text-align: center;
+}
 
 #greeting-container {
   margin-top: 20px;
