--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -20,6 +20,14 @@ h3 {
   text-align: center;
 }
 
+
 #greeting-container {
   margin-top: 20px;
 }
+#map {
+  border: thin solid black;
+  height: 500px;
+  width: 500px;
+  margin: auto;
+}
+
